# book-fastapi

book/: pyproject.toml
book/src/book_api/: main.py
